2010-07-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-summary-dialog.js:
	(saveDelegationInfo): we remove the first delegate only after the
	delegation chain has been requested. Otherwise that chain will
	always be empty, leaving the responded invitation in an
	inconsistent state.

	* src/calendar/base/content/calendar-item-editing.js:
	(findDelegationAttendees): we now return an array as it keeps the
	delegation chain sorted.

2010-07-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js:
	(freeBusyCacheEntry): we now pass the calId as parameter.
	(freeBusyCacheEntry.getEntries): we simply check that the
	"interval" member of each entries is available, altough the
	contrary should never happen.
	(freeBusyCacheEntry.integrateEntries): when aEntries is null, we
	create a mock array with a single fb interval with a type of
	"UNKNOWN".
	(conflictHandler.onResult): returns a conflict only for "BUSY"
	entries, ignoring anything else.

	* src/calendar/base/src/calFreeBusyService.js:
	(calFreeBusyListener.onResult) we invoke notifyResult even if
	"aResult" is null, to avoid breaking the chain of events.

2010-06-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-common-sets.js
	(calendarController.doCommand): the delete command is sometimes a
	"cmd_delete", directed at a different view than the calendar
	views. In that case, we must not display the confirmation dialog.
	Additionally, the confirmation dialog for event deletion would
	appear when deleting tasks, therefore with the wrong wording.

2010-06-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/clipboard.js (copyToClipboard): we
	ensure the recurrenceId attribute is set to null prior to copying
	the element to the clipboard, to avoid further parsing errors from
	the buggy ICS Parser provided with Lightning.
